solve open browser with specified URL. #1